--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Robust Architecture for Node",
   "main": "main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,15 @@
   "bugs": {
     "url": "https://github.com/Faris-AH/nodejs-ninja/issues"
   },
-  "homepage": "https://github.com/Faris-AH/nodejs-ninja#readme"
+  "homepage": "https://github.com/Faris-AH/nodejs-ninja#readme",
+  "dependencies": {
+    "@types/node": "^13.1.4",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2",
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.4"
+  }
 }
